BUGFIX: Improved column alignment in FF & IE for fixed table headers.
Changes included updating head.js and bootstrap.css

--- a/css/expandable.css
+++ b/css/expandable.css
@@ -33,7 +33,7 @@
 
 .expand-group fieldset {border: solid 1px #003C39; border-radius: 3px; margin: 0 10px 5px; padding: 5px; font-size: .85em; /*white-space: nowrap;*/}
 .expand-group fieldset .checkbox, .expand-group fieldset .radio {margin: -2px 0 0 0;}
-.expand-group fieldset .checkbox input[type="checkbox"], input[type="radio"] {margin: 2px 0 0 -14px;}
+.expand-group fieldset .checkbox input[type="checkbox"], input[type="radio"] {position: static; margin: 2px 0 0 5px;} */
 .expand-group fieldset fieldset {width:97%; margin: 1px 0 0 1%;}
 
 .expand-group form legend {
